--- a/extras/nginx.conf
+++ b/extras/nginx.conf
@@ -11,7 +11,7 @@ upstream ussr {
 }
 
 server {
-    server_name osu.ussr.pl;
+    server_name osu.punsu.fun;
     listen 443 ssl;
     ssl_certificate /etc/letsencrypt/live/punsu.fun/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/punsu.fun/privkey.pem;
@@ -37,7 +37,7 @@ server {
 
     # Screenshots are all handled by Nginx for performance.
     location ~ ^/ss/(.*) {
-        root /home/ubuntu/screenshots;
+        root /home/Pun/screenshots;
         add_header content-type "image/png";
         try_files /$1 =404;
     }
